# NUSim

./: .gitignore  README.md  b  pyproject.toml
docs/: K1_MUJOCO_SETUP.md  OBS_ACTION_CONTRACT.md
mujoco/: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  b.py
mujoco/cmake/: FetchGlfw.cmake  FetchJson.cmake  FetchNUClear.cmake  FetchOnnxRuntime.cmake  K1SimRole.cmake  MuJoCoTarget.cmake  generate_role.py
mujoco/config/: camera.yaml  dds.yaml  gains.yaml  locomotion.yaml  simulation.yaml  supervisor.yaml
mujoco/docker/: Dockerfile  k1sim.sh
mujoco/idl/: regenerate.sh
mujoco/idl/booster_interface/msg/: BatteryState.idl  ButtonEvent.idl  FallDownState.idl  ImuState.idl  LowCmd.idl  LowState.idl  MotorCmd.idl  MotorState.idl  Odometer.idl
mujoco/idl/booster_msgs/msg/: RpcReqMsg.idl  RpcRespMsg.idl
mujoco/idl_gen/booster_interface/: BatteryState.cxx  BatteryState.h  BatteryStateCdrAux.hpp  BatteryStateCdrAux.ipp  BatteryStatePubSubTypes.cxx  BatteryStatePubSubTypes.h  ButtonEvent.cxx  ButtonEvent.h  ButtonEventCdrAux.hpp  ButtonEventCdrAux.ipp  ButtonEventPubSubTypes.cxx  ButtonEventPubSubTypes.h  FallDownState.cxx  FallDownState.h  FallDownStateCdrAux.hpp  FallDownStateCdrAux.ipp  FallDownStatePubSubTypes.cxx  FallDownStatePubSubTypes.h  ImuState.cxx  ImuState.h  ImuStateCdrAux.hpp  ImuStateCdrAux.ipp  ImuStatePubSubTypes.cxx  ImuStatePubSubTypes.h  LowCmd.cxx  LowCmd.h  LowCmdCdrAux.hpp  LowCmdCdrAux.ipp  LowCmdPubSubTypes.cxx  LowCmdPubSubTypes.h  LowState.cxx  LowState.h  LowStateCdrAux.hpp  LowStateCdrAux.ipp  LowStatePubSubTypes.cxx  LowStatePubSubTypes.h  MotorCmd.cxx  MotorCmd.h  MotorCmdCdrAux.hpp  MotorCmdCdrAux.ipp  (+14 more)
mujoco/idl_gen/booster_msgs/: RpcReqMsg.cxx  RpcReqMsg.h  RpcReqMsgCdrAux.hpp  RpcReqMsgCdrAux.ipp  RpcReqMsgPubSubTypes.cxx  RpcReqMsgPubSubTypes.h  RpcRespMsg.cxx  RpcRespMsg.h  RpcRespMsgCdrAux.hpp  RpcRespMsgCdrAux.ipp  RpcRespMsgPubSubTypes.cxx  RpcRespMsgPubSubTypes.h
mujoco/models/k1/: K1_22dof.xml  VENDORED.md  k1_scene_flat.xml  k1_scene_robocup.xml
mujoco/models/k1/policies/: k1_walk.onnx
mujoco/module/Camera/: CMakeLists.txt
mujoco/module/Camera/src/: Camera.cpp  Camera.hpp  CameraConfig.hpp  EglContext.hpp  SharedImageWriter.cpp  SharedImageWriter.hpp  SharedPoseWriter.cpp  SharedPoseWriter.hpp
mujoco/module/ConsoleLog/: CMakeLists.txt
mujoco/module/ConsoleLog/src/: ConsoleLog.cpp  ConsoleLog.hpp
mujoco/module/Locomotion/: CMakeLists.txt
mujoco/module/Locomotion/src/: GetUpScript.cpp  GetUpScript.hpp  LocoMath.hpp  Locomotion.cpp  Locomotion.hpp  LocomotionBackend.hpp  LocomotionController.cpp  LocomotionController.hpp
mujoco/module/Locomotion/src/backends/: KinematicBackend.cpp  KinematicBackend.hpp  KinematicMath.hpp  PolicyBackend.cpp  PolicyBackend.hpp
mujoco/module/SdkBridge/: CMakeLists.txt  PROTOCOL.md
mujoco/module/SdkBridge/src/: DdsParticipant.cpp  DdsParticipant.hpp  RpcDispatch.cpp  RpcDispatch.hpp  RpcServer.cpp  RpcServer.hpp  SdkBridge.cpp  SdkBridge.hpp  StatePublisher.cpp  StatePublisher.hpp
mujoco/module/SdkBridge/test_support/: CMakeLists.txt  SyntheticState.cpp  SyntheticState.hpp  main.cpp
mujoco/module/Simulation/: CMakeLists.txt
mujoco/module/Simulation/src/: SimCore.cpp  SimCore.hpp  Simulation.cpp  Simulation.hpp
mujoco/module/Supervisor/: CMakeLists.txt
mujoco/module/Supervisor/src/: GameControllerPacket.hpp  Supervisor.cpp  Supervisor.hpp  SupervisorConfig.hpp  SupervisorLogic.hpp  SupervisorPlacement.hpp
mujoco/module/Viewer/: CMakeLists.txt
mujoco/module/Viewer/src/: Viewer.cpp  Viewer.hpp
mujoco/roles/sim/: soccer.role  training.role
mujoco/shared/: CliOptions.hpp
mujoco/shared/gl/: XThreads.hpp
mujoco/shared/k1/: BoosterApi.hpp  JointIndex.hpp
mujoco/shared/message/: Commands.hpp  SimMessages.hpp
mujoco/shared/sim/: ModelMap.hpp  PdController.hpp  StepController.hpp
mujoco/shared/util/: Config.hpp
mujoco/src/: main.cpp
mujoco/test/: run_all.sh
mujoco/test/contract/: README.md  check_model.py  policy_walk_check.py  test_sdk_roundtrip.py
mujoco/test/contract/host_client/: .gitignore  build.sh  sdk_client_check.cpp
mujoco/test/unit/: CMakeLists.txt  test_link_sanity.cpp  test_locomotion.cpp  test_model_load.cpp  test_pd_stand.cpp  test_rpc_dispatch.cpp  test_supervisor.cpp
mujoco/test/unit/assets/: make_random_policy.py  random_policy.onnx
mujoco/tools/: _util.py  build.py  configure.py  image.py  install_deps.sh  play.py  roles.py  run.py  train.py
mujoco/training/: OBS_ACTION_CONTRACT.md  README.md  export_onnx.py  policy.py  requirements.txt  shared_names.py  train.py
mujoco/training/configs/: walk.yaml
mujoco/training/models/: README.md
mujoco/training/policies/: walk.py
mujoco/training_mjlab/: OBS_ACTION_CONTRACT.md  README.md  __init__.py
mujoco/training_mjlab/assets/: __init__.py  k1_constants.py
mujoco/training_mjlab/tasks/: __init__.py
mujoco/training_mjlab/tasks/k1_walk/: __init__.py  env_cfg.py  mdp.py  rl_cfg.py
scripts/k1/: run_mujoco.sh
