[project]
name = "nusim"
version = "0.1.0"
description = "Host-side tooling (the ./b dispatcher + formatters) for the NUSim K1 MuJoCo simulator."
readme = "README.md"
# Cap <3.13: pinned black 20.8b1 pulls typed-ast, no 3.13 wheel (lift once black is
# bumped). uv fetches a matching interpreter.
requires-python = ">=3.11,<3.13"
dependencies = [
    "cmake-format==0.6.13",
    "isort==5.7.0",
    "black==20.8b1",
    # black 20.8b1 imports click._unicodefun, removed in click 8.1. Drop this pin
    # when black is bumped.
    "click<8.1",
    "termcolor",
]

[tool.uv]
# Pure tooling + scripts (mujoco/b.py is stdlib-only); nothing to build/install.
package = false

[tool.black]
line-length = 120

[tool.isort]
line_length=120
known_first_party=['b', 'utility']
